<resources>
    <string name="app_name">CountriesApp</string>
    <string name="button_login_register">Registrar</string>
    <string name="button_login_login">Login</string>
    <string name="hint_login_password">Senha</string>
    <string name="hint_login_user_name">Usuário</string>
    <string name="title_login">Entre com sua conta</string>
    <string name="sub_title_login">Ou registre para uma nova</string>
    <string name="title_register">Registre sua conta</string>
    <string name="hint_register_user_name">Nome</string>
    <string name="button_cancel">Cancelar</string>
    <string name="title_main_screen">Minha Lista de Países</string>
    <string name="menu_logout">Logout</string>
    <string name="hint_busca">Buscar</string>
    <string name="field_Title_capital">Capital:</string>
    <string name="field_Title_currency">Moeda:</string>
    <string name="field_title_area">Área:</string>
    <string name="field_title_population">População:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="country_tab_info">Informações</string>
    <string name="country_tab_history">História</string>
    <string name="history">História</string>
    <string name="location">Localização</string>
</resources>